--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password:
+  username: your_username
+  password: your_passwrod
   socket: /var/run/mysqld/mysqld.sock
 
 development:
